adding stripe payment

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "connect-mongodb-session": "^5.0.0",
+    "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -19,7 +19,8 @@
     "hbs": "^4.2.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "stripe": "^16.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
