--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "pdfkit": "^0.15.0",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0"
   },
