--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
+    "socket.io": "^4.8.0",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0"
   },
