--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
     "socket.io": "^4.8.0",
+    "socket.io-express-session": "^0.1.3",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0"
   },
