--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "socket.io": "^4.8.0",
     "socket.io-express-session": "^0.1.3",
     "stripe": "^16.9.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
