--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js" // "start": "nodemon app.js"  for render hosting.
   },
   "author": "",
   "license": "ISC",
